# CFace

./: CMakeLists.txt  DataPrepare.h  ExtractFaces.cpp  ExtractFaces.h  README.md  TrainModel.cpp
ModelCreation/: CreateModel.py  main.py
cppflow/include/cppflow/: model copy.h  model.h
lib/: DataPrepare.cpp  TrainModel.h  main.cpp
